@@ -30,8 +30,8 @@ import csw.params.events.SystemEvent;
 import csw.params.javadsl.JKeyType;
 import csw.params.javadsl.JUnits;
 
-import java.util.Collections;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -181,7 +181,7 @@ public class JSampleAssemblyHandlersAlarm extends JComponentHandlers {
 
     private IEventSubscription subscribeToHcd() {
         log.info("Starting subscription.");
-        return cswCtx.eventService().defaultSubscriber().subscribeCallback(Collections.singleton(counterEventKey), this::processEvent);
+        return cswCtx.eventService().defaultSubscriber().subscribeCallback(Set.of(counterEventKey), this::processEvent);
     }
 
     private void unsubscribeHcd() {
